# autism-recsys-api

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README  README.md  compose.override.yaml  compose.yaml  docker-compose.yaml  pyproject.toml
api/: .dockerignore  Dockerfile  pyproject.toml
api/config/: default.yaml
api/hopwise/: pyproject.toml
api/hopwise/hopwise/data/dataset/: kg_path_dataset.py
api/src/app/: main.py  schema.py
api/src/app/routers/: info.py  recommendation.py
api/src/core/: data.py  dummy.py  info.py  logger.py  recommendation.py  recommendation_tools.py  service.py  utils.py
config/: default.yaml
create_db/: Dockerfile  main.py
create_db/src/: create.py  reader.py
data/: phase_recipes.parquet
experiments/: Dockerfile  environment.yml  main.py  pyproject.toml
experiments/config/: dataset.yaml
experiments/src/: _create.py  create.py  reader.py
experiments/train/: hopwise.yaml  ml100k.yaml  train.py
experiments/train/log_tensorboard/BPR-autism-Nov-27-2025_08-37-36-4ae4d1/: events.out.tfevents.1764232657.f0b96d81b9b9.217.0
experiments/train/log_tensorboard/BPR-autism-Nov-27-2025_08-37-36-4ae4d1/1764232658.6163228/: events.out.tfevents.1764232658.f0b96d81b9b9.217.1
experiments/train/log_tensorboard/BPR-autism-Nov-27-2025_08-38-10-da5b33/: events.out.tfevents.1764232690.f0b96d81b9b9.339.0
experiments/train/log_tensorboard/BPR-autism-Nov-27-2025_08-38-10-da5b33/1764232692.0795748/: events.out.tfevents.1764232692.f0b96d81b9b9.339.1
experiments/train/log_tensorboard/PEARLM-autism-Dec-05-2025_09-16-55-eab66d/: events.out.tfevents.1764927284.1808e379e0f7.15.0
experiments/train/log_tensorboard/PEARLM-autism-Dec-05-2025_09-54-47-011626/: events.out.tfevents.1764928644.07d7db604a61.13.0
experiments/train/log_tensorboard/PEARLM-autism-Dec-05-2025_09-54-47-011626/1764928882.7536676/: events.out.tfevents.1764928882.07d7db604a61.13.1
experiments/train/log_tensorboard/PEARLM-ml-100k-Dec-03-2025_15-09-06-3a72cd/: events.out.tfevents.1764774721.63318925ccb5.3358.0
experiments/utils/: README.md  dataloader.py
hopwise/: hopwise.yaml
hopwise/hopwise/data/dataset/: kg_dataset.py
src/api/: main.py
src/api/routes/: __init__.py  recommendation.py  schema.py
src/app/: main.py  schema.py
src/app/routers/: info.py  recommendation.py
src/core/: __init__.py  alternative.py  info.py  main.py  recommendation.py  recommendation_tools.py  semantic_matcher.py  utils.py
