[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "AutismRecsysAPI"
license = { file = "LICENSE" }

requires-python = ">=3.10"
dynamic = ["version"]

classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only"
]

# if adding new dependencies, remember to sync:
# docker compose run --rm api uv sync --frozen
dependencies = [
    # --- hopwise dependencies version constraints ---
    "igraph~=0.10.0",
    "transformers<4.56.0",
    # --- project dependencies ---
    "uvicorn",
    "fastapi",
    "pydantic",
    "polars",
    "neo4j>=5.0.0",
    "numpy",
    "hydra-core>=1.3.2",
    "faiss-gpu>=1.7.2",
    "hopwise[pathlm, cli] @ git+https://github.com/tail-unica/hopwise.git@24-add-support-for-user-side-kg-and-testing",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff",
    "scalene>=1.5.51",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "yellowbrick>=1.5",
]

# --- Ruff Configuration (linting) ---

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
  # Pylint
  "PL",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  # pyupgrade
  "UP",
  # pydocstyle
  # "D",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"