[project]
name = "experiments"
version = "0.1.0"
description = "Experiments for Autism Recommender System"
requires-python = ">=3.10"
dependencies = [
    # --- hopwise dependencies version constraints ---
    "igraph~=0.10.0",
    "transformers<4.56.0",
    # --- project dependencies ---
    "neo4j>=5.0.0",
    "hopwise[pathlm, cli] @ git+https://github.com/tail-unica/hopwise.git@24-add-support-for-user-side-kg-and-testing",
    "hydra-core",
    "polars",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true